--- a/definisi.html
+++ b/definisi.html
@@ -170,96 +170,96 @@
             <select id="nama-organ" class="w-full border border-gray-300 rounded-lg px-4 py-2 focus:outline-none focus:ring-2 focus:ring-accent">
               <option value="">Pilih Nama Organ</option>
               <!-- Nama Organ dari Sistem Saraf -->
-              <option class="hidden" value="otak">Otak</option>
-              <option class="hidden" value="sumsum-tulang-belakang">Sumsum Tulang Belakang</option>
-              <option class="hidden" value="saraf-perifer">Saraf Perifer</option>
-              <option class="hidden" value="otonom">Otonom</option>
-              <option class="hidden" value="neuron">Neuron</option>
+              <option class="sistem-saraf hidden" value="otak">Otak</option>
+              <option class="sistem-saraf hidden" value="sumsum-tulang-belakang">Sumsum Tulang Belakang</option>
+              <option class="sistem-saraf hidden" value="saraf-perifer">Saraf Perifer</option>
+              <option class="sistem-saraf hidden" value="otonom">Otonom</option>
+              <option class="sistem-saraf hidden" value="neuron">Neuron</option>
 
               <!-- Nama Organ dari Sistem Endokrin -->
-              <option class="hidden" value="kelenjar-hipofisis">Kelenjar Hipofisis</option>
-              <option class="hidden" value="kelenjar-tiroid">Kelenjar Tiroid</option>
-              <option class="hidden" value="kelenjar-paratiroid">Kelenjar Paratiroid</option>
-              <option class="hidden" value="kelenjar-adrenal">Kelenjar Adrenal</option>
-              <option class="hidden" value="pankreas-pencernaan">Pankreas</option>
-              <option class="hidden" value="gonad">Gonad (Testis atau Ovarium)</option>
-              <option class="hidden" value="kelenjar-pineal">Kelenjar Pineal</option>
-              <option class="hidden" value="kelenjar-timus">Kelenjar Timus</option>
+              <option class="sistem-endokrin hidden" value="kelenjar-hipofisis">Kelenjar Hipofisis</option>
+              <option class="sistem-endokrin hidden" value="kelenjar-tiroid">Kelenjar Tiroid</option>
+              <option class="sistem-endokrin hidden" value="kelenjar-paratiroid">Kelenjar Paratiroid</option>
+              <option class="sistem-endokrin hidden" value="kelenjar-adrenal">Kelenjar Adrenal</option>
+              <option class="sistem-endokrin hidden" value="pankreas-pencernaan">Pankreas</option>
+              <option class="sistem-endokrin hidden" value="gonad">Gonad (Testis atau Ovarium)</option>
+              <option class="sistem-endokrin hidden" value="kelenjar-pineal">Kelenjar Pineal</option>
+              <option class="sistem-endokrin hidden" value="kelenjar-timus">Kelenjar Timus</option>
 
               <!-- Nama Organ dari Sistem Pencernaan -->
-              <option class="hidden" value="mulut">Mulut</option>
-              <option class="hidden" value="kerongkongan">Kerongkongan</option>
-              <option class="hidden" value="lambung">Lambung</option>
-              <option class="hidden" value="usus-halus">Usus Halus</option>
-              <option class="hidden" value="usus-besar">Usus Besar</option>
-              <option class="hidden" value="hati">Hati</option>
-              <option class="hidden" value="pankreas-pencernaan">Pankreas</option>
-              <option class="hidden" value="kantong-empedu">Kantong Empedu</option>
-              <option class="hidden" value="rektum">Rektum</option>
-              <option class="hidden" value="anus">Anus</option>
+              <option class="sistem-pencernaan hidden" value="mulut">Mulut</option>
+              <option class="sistem-pencernaan hidden" value="kerongkongan">Kerongkongan</option>
+              <option class="sistem-pencernaan hidden" value="lambung">Lambung</option>
+              <option class="sistem-pencernaan hidden" value="usus-halus">Usus Halus</option>
+              <option class="sistem-pencernaan hidden" value="usus-besar">Usus Besar</option>
+              <option class="sistem-pencernaan hidden" value="hati">Hati</option>
+              <option class="sistem-pencernaan hidden" value="pankreas-pencernaan">Pankreas</option>
+              <option class="sistem-pencernaan hidden" value="kantong-empedu">Kantong Empedu</option>
+              <option class="sistem-pencernaan hidden" value="rektum">Rektum</option>
+              <option class="sistem-pencernaan hidden" value="anus">Anus</option>
 
               <!-- Nama Organ dari Sistem Pernapasan -->
-              <option class="hidden" value="hidung">Hidung</option>
-              <option class="hidden" value="faring">Faring</option>
-              <option class="hidden" value="laring">Laring</option>
-              <option class="hidden" value="trakea">Trakea</option>
-              <option class="hidden" value="bronkus">Bronkus</option>
-              <option class="hidden" value="paru-paru">Paru-paru</option>
-              <option class="hidden" value="diafragma">Diafragma</option>
+              <option class="sistem-pernapasan hidden" value="hidung">Hidung</option>
+              <option class="sistem-pernapasan hidden" value="faring">Faring</option>
+              <option class="sistem-pernapasan hidden" value="laring">Laring</option>
+              <option class="sistem-pernapasan hidden" value="trakea">Trakea</option>
+              <option class="sistem-pernapasan hidden" value="bronkus">Bronkus</option>
+              <option class="sistem-pernapasan hidden" value="paru-paru">Paru-paru</option>
+              <option class="sistem-pernapasan hidden" value="diafragma">Diafragma</option>
 
               <!-- Nama Organ dari Sistem Peredaran Darah -->
-              <option class="hidden" value="jantung">Jantung</option>
-              <option class="hidden" value="arteri">Arteri</option>
-              <option class="hidden" value="vena">Vena</option>
-              <option class="hidden" value="kapiler">Kapiler</option>
+              <option class="sistem-peredaran-darah hidden" value="jantung">Jantung</option>
+              <option class="sistem-peredaran-darah hidden" value="arteri">Arteri</option>
+              <option class="sistem-peredaran-darah hidden" value="vena">Vena</option>
+              <option class="sistem-peredaran-darah hidden" value="kapiler">Kapiler</option>
 
               <!-- Nama Organ dari Sistem Limfatik -->
-              <option class="hidden" value="kelenjar-getah-bening">Kelenjar Getah Bening</option>
-              <option class="hidden" value="limpa">Limpa</option>
-              <option class="hidden" value="pembuluh-limfatik">Pembuluh Limfatik</option>
-              <option class="hidden" value="tonsil">Tonsil</option>
-              <option class="hidden" value="adenoid">Adenoid</option>
-              <option class="hidden" value="timos">Timos</option>
-              <option class="hidden" value="sumsum-tulang-limfatik">Sumsum Tulang</option>
+              <option class="sistem-limfatik hidden" value="kelenjar-getah-bening">Kelenjar Getah Bening</option>
+              <option class="sistem-limfatik hidden" value="limpa">Limpa</option>
+              <option class="sistem-limfatik hidden" value="pembuluh-limfatik">Pembuluh Limfatik</option>
+              <option class="sistem-limfatik hidden" value="tonsil">Tonsil</option>
+              <option class="sistem-limfatik hidden" value="adenoid">Adenoid</option>
+              <option class="sistem-limfatik hidden" value="timos">Timos</option>
+              <option class="sistem-limfatik hidden" value="sumsum-tulang-limfatik">Sumsum Tulang</option>
 
               <!-- Nama Organ dari Sistem Muskuloskeletal -->
-              <option class="hidden" value="tulang">Tulang</option>
-              <option class="hidden" value="otot">Otot</option>
-              <option class="hidden" value="sendi">Sendi</option>
-              <option class="hidden" value="tendon">Tendon</option>
-              <option class="hidden" value="ligamen">Ligamen</option>
+              <option class="sistem-muskuloskeletal hidden" value="tulang">Tulang</option>
+              <option class="sistem-muskuloskeletal hidden" value="otot">Otot</option>
+              <option class="sistem-muskuloskeletal hidden" value="sendi">Sendi</option>
+              <option class="sistem-muskuloskeletal hidden" value="tendon">Tendon</option>
+              <option class="sistem-muskuloskeletal hidden" value="ligamen">Ligamen</option>
 
               <!-- Nama Organ dari Sistem Integumen -->
-              <option class="hidden" value="kulit">Kulit</option>
-              <option class="hidden" value="rambut">Rambut</option>
-              <option class="hidden" value="kuku">Kuku</option>
-              <option class="hidden" value="kelenjar-keringat">Kelenjar Keringat</option>
-              <option class="hidden" value="kelenjar-minyak">Kelenjar Minyak</option>
+              <option class="sistem-integumen hidden" value="kulit">Kulit</option>
+              <option class="sistem-integumen hidden" value="rambut">Rambut</option>
+              <option class="sistem-integumen hidden" value="kuku">Kuku</option>
+              <option class="sistem-integumen hidden" value="kelenjar-keringat">Kelenjar Keringat</option>
+              <option class="sistem-integumen hidden" value="kelenjar-minyak">Kelenjar Minyak</option>
 
               <!-- Nama Organ dari Sistem Ekskresi -->
-              <option class="hidden" value="ginjal">Ginjal</option>
-              <option class="hidden" value="ureter">Ureter</option>
-              <option class="hidden" value="kandung-kemih">Kandung Kemih</option>
-              <option class="hidden" value="uretra">Uretra</option>
+              <option class="sistem-ekskresi hidden" value="ginjal">Ginjal</option>
+              <option class="sistem-ekskresi hidden" value="ureter">Ureter</option>
+              <option class="sistem-ekskresi hidden" value="kandung-kemih">Kandung Kemih</option>
+              <option class="sistem-ekskresi hidden" value="uretra">Uretra</option>
 
               <!-- Nama Organ dari Sistem Reproduksi -->
-              <option class="hidden" value="testis">Testis</option>
-              <option class="hidden" value="penis">Penis</option>
-              <option class="hidden" value="vesikula-seminalis">Vesikula Seminalis</option>
-              <option class="hidden" value="prostat">Prostat</option>
-              <option class="hidden" value="vas-deferens">Vas Deferens</option>
-              <option class="hidden" value="ovarium">Ovarium</option>
-              <option class="hidden" value="tuba-falopi">Tuba Falopi</option>
-              <option class="hidden" value="uterus">Uterus</option>
-              <option class="hidden" value="vagina">Vagina</option>
+              <option class="sistem-reproduksi hidden" value="testis">Testis</option>
+              <option class="sistem-reproduksi hidden" value="penis">Penis</option>
+              <option class="sistem-reproduksi hidden" value="vesikula-seminalis">Vesikula Seminalis</option>
+              <option class="sistem-reproduksi hidden" value="prostat">Prostat</option>
+              <option class="sistem-reproduksi hidden" value="vas-deferens">Vas Deferens</option>
+              <option class="sistem-reproduksi hidden" value="ovarium">Ovarium</option>
+              <option class="sistem-reproduksi hidden" value="tuba-falopi">Tuba Falopi</option>
+              <option class="sistem-reproduksi hidden" value="uterus">Uterus</option>
+              <option class="sistem-reproduksi hidden" value="vagina">Vagina</option>
 
               <!-- Nama Organ dari Sistem Imun -->
-              <option class="hidden" value="kelenjar-getah-bening-imun">Kelenjar Getah Bening</option>
-              <option class="hidden" value="limpa-imun">Limpa</option>
-              <option class="hidden" value="tonsil-imun">Tonsil</option>
-              <option class="hidden" value="timos-imun">Timos</option>
-              <option class="hidden" value="sumsum-tulang-imun">Sumsum Tulang</option>
-              <option class="hidden" value="sel-darah-putih">Sel Darah Putih</option>
+              <option class="sistem-imun hidden" value="kelenjar-getah-bening-imun">Kelenjar Getah Bening</option>
+              <option class="sistem-imun hidden" value="limpa-imun">Limpa</option>
+              <option class="sistem-imun hidden" value="tonsil-imun">Tonsil</option>
+              <option class="sistem-imun hidden" value="timos-imun">Timos</option>
+              <option class="sistem-imun hidden" value="sumsum-tulang-imun">Sumsum Tulang</option>
+              <option class="sistem-imun hidden" value="sel-darah-putih">Sel Darah Putih</option>
             </select>
           </div>
 
@@ -270,7 +270,7 @@
 
         <!-- Deskripsi -->
         <div class="md:col-span-3 bg-gray-100 p-6 shadow-lg rounded-lg flex items-start">
-          <img src="" alt="" srcset="" id="gambar-penunjang" class="rounded-[20px] w-[300px] h-[300px] object-cover mr-6 hidden border-2 border-gray-300 border-none" />
+          <img src="" alt="" id="gambar-penunjang" class="rounded-[20px] w-[300px] h-[300px] object-cover mr-6 hidden border-2 border-gray-300" />
           <p id="deskripsi-penjelasan" class="text-gray-500">Pilih sistem organ dan nama organ untuk melihat penjelasan.</p>
         </div>
       </div>
@@ -283,7 +283,7 @@
       <div class="lg:w-1/2 p-6 bg-opacity-50 rounded-lg">
         <h2 class="text-4xl font-bold mb-4 text-white">Masih bingung belajar tentang anatomi?</h2>
         <p class="text-lg mb-6">Tenang, kami mempunyai fitur rekomendasi yang membantu kamu lebih memahami anatomi tubuh manusia yang tepat dengan menjawab pertanyaan yang kami berikan.</p>
-        <a href="kontak.html" target="_blank" rel="noopener noreferrer" class="inline-block bg-white text-black font-semibold py-3 px-6 rounded-lg hover:bg-gray-200 transition"> Gabung &rarr; </a>
+        <a href="kontak.html" class="inline-block bg-white text-black font-semibold py-3 px-6 rounded-lg hover:bg-gray-200 transition"> Gabung &rarr; </a>
       </div>
     </section>
     <!-- End Banner -->
@@ -318,7 +318,6 @@
             </nav>
           </div>
 
-          <!-- Kategori -->
           <!-- Kategori -->
           <div class="lg:w-1/3 md:w-1/2 w-full">
             <h2 class="text-lg font-bold mb-6">Kategori</h2>
