--- a/definisi.html
+++ b/definisi.html
@@ -295,7 +295,9 @@
         <div class="flex flex-col md:flex-row space-y-8 md:space-y-0 md:space-x-10">
           <!-- Logo dan Deskripsi -->
           <div class="lg:w-1/5 md:w-1/2">
-            <h1 class="text-xl md:text-3xl font-bold mb-4"><span class="text-accent">EDUHEALTH</span></h1>
+            <a href="index.html">
+              <img src="./assets/img/header/logo.svg" alt="logo-eduhealth" />
+            </a>
             <p class="mt-2 text-md mb-6">Website tentang anatomi tubuh manusia. Untuk mengikuti lomba ICONIC IT 2024 diselenggarakan oleh Informatika UNSIL.</p>
             <div class="flex space-x-6 mb-6">
               <a href="https://github.com/" target="_blank" class="flex items-center w-max gap-x-2 text-accent hover:text-accent-secondary">
@@ -319,6 +321,7 @@
             </nav>
           </div>
 
+          <!-- Kategori -->
           <!-- Kategori -->
           <div class="lg:w-1/3 md:w-1/2 w-full">
             <h2 class="text-lg font-bold mb-6">Kategori</h2>
