--- a/eksplor.html
+++ b/eksplor.html
@@ -153,52 +153,52 @@
     <div class="flex flex-wrap justify-center space-x-4 mt-20">
       <!-- Card 1 -->
       <a href="">
-        <div class="max-w-sm rounded overflow-hidden shadow-xl mb-4 transform transition-transform duration-500 ease-in-out hover:scale-105">
+        <div class="max-w-sm rounded overflow-hidden shadow-xl mb-4 transform transition-transform duration-500 ease-in-out hover:scale-105 font-bold text-center text-black hover:text-accent-secondary text-xl">
           <img class="w-full" src="assets/img/spesial/otak.png" alt="otak" />
           <div class="p-4">
-            <p class="font-bold text-center text-accent-secondary text-xl mb-2">Otak</p>
+            <p class="mb-2">Otak</p>
           </div>
         </div>
       </a>
 
       <!-- Card 2 -->
       <a href="">
-        <div class="max-w-sm rounded overflow-hidden shadow-xl mb-4 transform transition-transform duration-500 ease-in-out hover:scale-105">
+        <div class="max-w-sm rounded overflow-hidden shadow-xl mb-4 transform transition-transform duration-500 ease-in-out hover:scale-105 font-bold text-center text-black hover:text-accent-secondary text-xl">
           <img class="w-full" src="assets/img/spesial/jantung.png" alt="jantung" />
           <div class="p-4">
-            <p class="font-bold text-center text-accent-secondary text-xl mb-2">Jantung</p>
+            <p class="mb-2">Jantung</p>
           </div>
         </div>
       </a>
 
       <!-- Card 3 -->
       <a href="">
-        <div class="max-w-sm rounded overflow-hidden shadow-xl mb-4 transform transition-transform duration-500 ease-in-out hover:scale-105">
+        <div class="max-w-sm rounded overflow-hidden shadow-xl mb-4 transform transition-transform duration-500 ease-in-out hover:scale-105 font-bold text-center text-black hover:text-accent-secondary text-xl">
           <img class="w-full" src="assets/img/spesial/paru.png" alt="paru-paru" />
           <div class="p-4">
-            <p class="font-bold text-center text-accent-secondary text-xl mb-2">Paru - Paru</p>
+            <p class="mb-2">Paru - Paru</p>
           </div>
         </div>
       </a>
     </div>
 
-    <div class="flex justify-center space-x-4 mt-16">
+    <div class="flex justify-center space-x-4 my-20">
       <!-- Card 4 -->
       <a href="">
-        <div class="max-w-sm rounded overflow-hidden shadow-xl mb-4 transform transition-transform duration-500 ease-in-out hover:scale-105">
-          <img class="w-full" src="assets/img/spesial/liver.png" alt="hati-liver" />
+        <div class="max-w-sm rounded overflow-hidden shadow-xl mb-4 transform transition-transform duration-500 ease-in-out hover:scale-105 font-bold text-center text-black hover:text-accent-secondary text-xl">
+          <img class="w-full" src="assets/img/spesial/liver.png" alt="liver-hati" />
           <div class="p-4">
-            <h2 class="font-bold text-center text-accent-secondary text-xl mb-2">Hati / Liver</h2>
+            <p class="mb-2">Liver / Hati</p>
           </div>
         </div>
       </a>
 
       <!-- Card 5 -->
       <a href="">
-        <div class="max-w-sm rounded overflow-hidden shadow-xl mb-4 transform transition-transform duration-500 ease-in-out hover:scale-105">
-          <img class="w-full" src="assets/img/spesial/ginjal.png" alt="ginjal" />
+        <div class="max-w-sm rounded overflow-hidden shadow-xl mb-4 transform transition-transform duration-500 ease-in-out hover:scale-105 font-bold text-center text-black hover:text-accent-secondary text-xl">
+          <img class="w-full" src="assets/img/spesial/ginjal.png" alt="ginjal-hati" />
           <div class="p-4">
-            <h2 class="font-bold text-center text-accent-secondary text-xl mb-2">Ginjal</h2>
+            <p class="mb-2">Ginjal</p>
           </div>
         </div>
       </a>
@@ -210,7 +210,9 @@
         <div class="flex flex-col md:flex-row space-y-8 md:space-y-0 md:space-x-10">
           <!-- Logo dan Deskripsi -->
           <div class="lg:w-1/5 md:w-1/2">
-            <h1 class="text-xl md:text-3xl font-bold mb-4"><span class="text-accent">EDUHEALTH</span></h1>
+            <a href="index.html">
+              <img src="./assets/img/header/logo.svg" alt="logo-eduhealth" />
+            </a>
             <p class="mt-2 text-md mb-6">Website tentang anatomi tubuh manusia. Untuk mengikuti lomba ICONIC IT 2024 diselenggarakan oleh Informatika UNSIL.</p>
             <div class="flex space-x-6 mb-6">
               <a href="https://github.com/" target="_blank" class="flex items-center w-max gap-x-2 text-accent hover:text-accent-secondary">
