--- a/eksplor.html
+++ b/eksplor.html
@@ -152,9 +152,9 @@
     <!-- Card -->
     <div class="flex flex-wrap justify-center space-x-4 mt-20">
       <!-- Card 1 -->
-      <a href="">
+      <a href="/otak.html">
         <div class="max-w-sm rounded overflow-hidden shadow-xl mb-4 transform transition-transform duration-500 ease-in-out hover:scale-105 font-bold text-center text-black hover:text-accent-secondary text-xl">
-          <img class="w-full" src="assets/img/spesial/otak.png" alt="otak" />
+          <img class="w-full" src="assets/img/sorotan/vital.png" alt="otak" />
           <div class="p-4">
             <p class="mb-2">Otak</p>
           </div>
@@ -162,7 +162,7 @@
       </a>
 
       <!-- Card 2 -->
-      <a href="">
+      <a href="/jantung.html">
         <div class="max-w-sm rounded overflow-hidden shadow-xl mb-4 transform transition-transform duration-500 ease-in-out hover:scale-105 font-bold text-center text-black hover:text-accent-secondary text-xl">
           <img class="w-full" src="assets/img/spesial/jantung.png" alt="jantung" />
           <div class="p-4">
@@ -172,7 +172,7 @@
       </a>
 
       <!-- Card 3 -->
-      <a href="">
+      <a href="/paruparu.html">
         <div class="max-w-sm rounded overflow-hidden shadow-xl mb-4 transform transition-transform duration-500 ease-in-out hover:scale-105 font-bold text-center text-black hover:text-accent-secondary text-xl">
           <img class="w-full" src="assets/img/spesial/paru.png" alt="paru-paru" />
           <div class="p-4">
@@ -184,7 +184,7 @@
 
     <div class="flex justify-center space-x-4 my-20">
       <!-- Card 4 -->
-      <a href="">
+      <a href="/hati.html">
         <div class="max-w-sm rounded overflow-hidden shadow-xl mb-4 transform transition-transform duration-500 ease-in-out hover:scale-105 font-bold text-center text-black hover:text-accent-secondary text-xl">
           <img class="w-full" src="assets/img/spesial/liver.png" alt="liver-hati" />
           <div class="p-4">
@@ -194,7 +194,7 @@
       </a>
 
       <!-- Card 5 -->
-      <a href="">
+      <a href="/eksplor/ginjal.html">
         <div class="max-w-sm rounded overflow-hidden shadow-xl mb-4 transform transition-transform duration-500 ease-in-out hover:scale-105 font-bold text-center text-black hover:text-accent-secondary text-xl">
           <img class="w-full" src="assets/img/spesial/ginjal.png" alt="ginjal-hati" />
           <div class="p-4">
